@@ -96,7 +96,10 @@ $mime_drivers['imp']['html'] = array(
      * Set to 0 to disable this check. */
     'limit_inline_size' => 1048576,
     /* Check for phishing exploits? */
-    'phishing_check' => true
+    'phishing_check' => true,
+    /* A list of from e-mail addresses that are considered "safe" for purposes
+     * of image blocking (if enabled). */
+    'safe_addrs' => array()
 );
 
 /**
