@@ -2,6 +2,8 @@
 v5.0-git
 --------
 
+[mms] Allow admin to define list of safe e-mail addresses that will not
+      experience HTML image blocking (Request #9129).
 [mms] HTML compose editor uses Horde language for UI (Request #9084;
       leandro.damascena@gmail.com).
 [mms] Add config option to disable multipart/related conversions
